--- a/package.json
+++ b/package.json
@@ -8,9 +8,12 @@
     "@testing-library/user-event": "^13.5.0",
     "react": "^18.2.0",
     "react-data-table-component": "^7.5.2",
+    "react-date-picker": "^8.4.0",
+    "react-datepicker": "^4.8.0",
     "react-dom": "^18.2.0",
     "react-modal": "^3.15.1",
     "react-scripts": "5.0.1",
+    "react-select": "^5.4.0",
     "styled-components": "^5.3.5",
     "web-vitals": "^2.1.4"
   },
