--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react-datepicker": "^4.8.0",
     "react-dom": "^18.2.0",
     "react-modal": "^3.15.1",
+    "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "react-select": "^5.4.0",
     "styled-components": "^5.3.5",
